comienzo nueva pagina

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <header>
         <h2> Fase 1 </h2>
     </header>
+    <nav>
+        <a href="planing.html">planing</a>
+      </nav>
     <article>
         <section>
             <p> fecha de creación: dom 6 de sep 2020</p> <br>
