--- a/planing.html
+++ b/planing.html
@@ -35,7 +35,7 @@
       <h1>Propiedades básicas de CSS, Display: inline, block, inline-block</h1>      
     </header>    
     <nav>
-      <a href="https://andresmanuelarias.github.io/DSW-AndresArias/">index</a>
+      <a href="index.html">index</a>
     </nav>
     <section>      
       <article>
