--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <header>
-        <h2> Fase 1 </h2>
+        <h2> Fase 1 y 2 </h2>
     </header>
     <nav>
         <a href="planing.html">planing</a>
