--- a/planing.html
+++ b/planing.html
@@ -83,7 +83,7 @@
         <p>Los elemento  p  ocupan todo un bloque </p>
         <p>Elemento p</p>
         <p>Elemento p</p>
-        <p>Mientras los elmento a ocupan el mismo bloque </p>
+        <p>Mientras los elemento a ocupan el mismo bloque </p>
         <a>Elemento a</a>
         <a>Elemento a</a>
         <h2>pruebas</h2> 
