--- a/Conceptos.html
+++ b/Conceptos.html
@@ -31,6 +31,8 @@
             <li><a href="imagenes.html">  imagenes</a></li>
           </ul>
         </li>
+        <li> <a href="autor.html">autor</a>
+
       </ul>  
     </nav>
     <section>
