--- a/Recursos.html
+++ b/Recursos.html
@@ -27,6 +27,8 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
             <li><a href="imagenes.html">  imagenes</a></li>
           </ul>
         </li>
+        <li> <a href="autor.html">autor</a>
+
       </ul>  
     </nav>
     <section>
