--- a/inicio.html
+++ b/inicio.html
@@ -12,7 +12,7 @@ sobre el tema del sitio. -->
 </head>
 <body>
     <header>
-        <h2> Fase 3 </h2>
+        <h2> inicio </h2>
     </header>
     <nav >
       <ul >
@@ -24,6 +24,8 @@ sobre el tema del sitio. -->
             <li><a href="imagenes.html">  imagenes</a></li>
           </ul>
         </li>
+        <li> <a href="autor.html">autor</a>
+
       </ul>  
     </nav>
     <section>
