--- a/autor.html
+++ b/autor.html
@@ -15,7 +15,7 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
 </head>
 <body>
     <header>
-        <h2> Recursos </h2>
+        <h2> Autor </h2>
     </header>
     <nav >
       <ul >
@@ -28,20 +28,34 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
           </ul>
         </li>
         <li> <a href="autor.html">autor</a>
-
       </ul>  
     </nav>
     <section>
       <article>
-        <h2>b)Materiales:</h2> 
-         Coloque el nombre del material que usara para crear los contenidos de la
-         sección y el enlace de descarga de los mismos sean estos Texto, Imágenes,
-         Audios o Vídeos.
-         <h3>imagenes</h3>
-         <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg" alt="Logo css3" width="500" height="600">
-         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/120px-HTML5_logo_and_wordmark.svg.png" alt="logo html5" width="500" height="600">
-         
-        </article>
+        <article>
+
+            <ul>
+                <li>
+                    <b> nombre del programa:</b>Ingenieria de sistemas
+                </li>
+                <li>
+                    <b>Nombre:</b> Andres Manuel Arias Ariza
+                </li>
+                <li>
+                    <b>Celular:</b>3162542777
+                </li>
+                <li>
+                    <b>Ciudad:</b>Bogota
+                </li>
+                <li>
+                  <b>programa:</b>Sistemas
+              </li>
+              <li>
+                <b>correo:</b>andresariasejecuti@gmail 
+            </li>
+            </ul>
+      </article>
+       </article>
     </section>
     <footer>
     </footer>
