--- a/videos.html
+++ b/videos.html
@@ -15,7 +15,7 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
 </head>
 <body>
     <header>
-        <h2> Recursos </h2>
+        <h2> videos </h2>
     </header>
     <nav >
       <ul >
@@ -27,6 +27,8 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
             <li><a href="imagenes.html">  imagenes</a></li>
           </ul>
         </li>
+        <li> <a href="autor.html">autor</a>
+
       </ul>  
     </nav>
     <section>
