--- a/videos.html
+++ b/videos.html
@@ -20,14 +20,14 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
     <nav >
       <ul >
         <li> <a href="Conceptos.html">Conceptos</a> </li>
-        <li> <a href="inicio.html">inicio</a> </li>
+        <li> <a href="inicio.html">Inicio</a> </li>
         <li> <a href="Recursos.html">Recursos</a>
           <ul>
-            <li><a href="videos.html">  videos</a></li>
-            <li><a href="imagenes.html">  imagenes</a></li>
+            <li><a href="videos.html">  Videos</a></li>
+            <li><a href="imagenes.html">  Imagenes</a></li>
           </ul>
         </li>
-        <li> <a href="autor.html">autor</a>
+        <li> <a href="autor.html">Autor</a>
 
       </ul>  
     </nav>
