se utilizao validatos para mejorar la pagina

--- a/autor.html
+++ b/autor.html
@@ -7,15 +7,16 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
 
 -->
 <!DOCTYPE html>
-<html>
+<html lang="es" >
 <head>
 <title>Recursos</title>
 <link href="style.css" rel="stylesheet" type="text/css">
+<meta charset="UTF-8">
 
 </head>
 <body>
     <header>
-        <h2> Autor </h2>
+        <h2> DISEÑOS DE SITIOS WEB </h2>
     </header>
     <nav >
       <ul >
@@ -31,12 +32,13 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
       </ul>  
     </nav>
     <section>
-      <article>
+      
         <article>
+          <h2>Autor</h2>
 
             <ul>
                 <li>
-                    <b> nombre del programa:</b>Ingenieria de sistemas
+                    <b> Nombre del programa:</b>Ingenieria de sistemas
                 </li>
                 <li>
                     <b>Nombre:</b> Andres Manuel Arias Ariza
@@ -55,7 +57,6 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
             </li>
             </ul>
       </article>
-       </article>
     </section>
     <footer>
     </footer>
