--- a/Autoevaluación.html
+++ b/Autoevaluación.html
@@ -6,7 +6,7 @@ sobre el tema del sitio. -->
 <!DOCTYPE html>
 <html  lang="es">
 <head>
-<title>Fase 1</title>
+<title>Autoevaluación</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 <meta charset="UTF-8">
 </head>
@@ -24,33 +24,31 @@ sobre el tema del sitio. -->
             <li><a href="imagenes.html">  Imagenes</a></li>
           </ul>
         </li>
-        <li><a href="autor.html">Autor</a></li> 
+        <li> <a href="autor.html">Autor</a>
 
       </ul>  
     </nav>
     <section>
-      <h2>Inicio</h2>
-        <article>
-            <h2>a) Objetivo del sitio: </h2>
-            <h3> Objetivo General</h3> 
-            <p>comprender lo que compone el diseño web</p>
-            <ul>
-            
-              <li> Objetivo específico </li>
-             
+      <h2>Autoevaluación</h2>
 
+        <article>
+            <h2>a) Objetivo del sitio: </h2> 
+            <ul>
+              <h4> Objetivo General</h4>
+              <li> comprender lo que compone el diseño web </li>
+              <h5> Objetivo específico</h5>
+              <ol>
+               <li>
+                 Mostrar enlaces donde se encuentra el tema escogido
+               </li>
+               <li>
+                 Escribir información sobre el contenido escogido
+               </li>
+               <li>
+                 Realizar un mockup del index
+               </li>
+              </ol>
             </ul>
-            <ol>
-              <li>
-                Mostrar enlaces donde se encuentra el tema escogido
-              </li>
-              <li>
-                Escribir información sobre el contenido escogido
-              </li>
-              <li>
-                Realizar un mockup del index
-              </li>
-             </ol>
         </article>
     </section>
     <footer>
