--- a/Recursos.html
+++ b/Recursos.html
@@ -7,15 +7,15 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
 
 -->
 <!DOCTYPE html>
-<html>
+<html  lang="es">
 <head>
 <title>Recursos</title>
 <link href="style.css" rel="stylesheet" type="text/css">
-
+<meta charset="UTF-8">
 </head>
 <body>
     <header>
-        <h2> Recursos </h2>
+        <h2> DISEÑOS DE SITIOS WEB </h2>
     </header>
     <nav >
       <ul >
@@ -32,6 +32,8 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
       </ul>  
     </nav>
     <section>
+      <h2>Recursos</h2>
+
       <article>
         <h2>b)Materiales:</h2> 
          Coloque el nombre del material que usara para crear los contenidos de la
@@ -43,10 +45,10 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
          
  
         <h3> Videos:</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/5BfFMaawz48" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/DU9kY8kOu4s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/UIo1p5s1BAY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/rJp3IWsk_os" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe  src="https://www.youtube.com/embed/5BfFMaawz48"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe  src="https://www.youtube.com/embed/DU9kY8kOu4s"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe  src="https://www.youtube.com/embed/UIo1p5s1BAY"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe  src="https://www.youtube.com/embed/rJp3IWsk_os"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
        </article>
     </section>
     <footer>
