se utilizao validatos para mejorar la pagina

--- a/Autoevaluación.html
+++ b/Autoevaluación.html
@@ -6,9 +6,11 @@ sobre el tema del sitio. -->
 <!DOCTYPE html>
 <html  lang="es">
 <head>
-<title>Autoevaluación</title>
+<title>Fase 1</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 <meta charset="UTF-8">
+<meta name="autor" content="Andres Manuel Arias Ariza">
+
 </head>
 <body>
     <header>
@@ -24,31 +26,22 @@ sobre el tema del sitio. -->
             <li><a href="imagenes.html">  Imagenes</a></li>
           </ul>
         </li>
-        <li> <a href="autor.html">Autor</a>
+        <li><a href="autor.html">Autor</a></li> 
+
+        <li> <a href="Autoevaluación" >Autoevaluación</a> 
+          <ul>
+            <li><a href="Evaluación_Sitio.html">  Evaluación Sitio.</a></li>         
+          </ul>
+        </li>
 
       </ul>  
     </nav>
     <section>
       <h2>Autoevaluación</h2>
-
         <article>
-            <h2>a) Objetivo del sitio: </h2> 
-            <ul>
-              <h4> Objetivo General</h4>
-              <li> comprender lo que compone el diseño web </li>
-              <h5> Objetivo específico</h5>
-              <ol>
-               <li>
-                 Mostrar enlaces donde se encuentra el tema escogido
-               </li>
-               <li>
-                 Escribir información sobre el contenido escogido
-               </li>
-               <li>
-                 Realizar un mockup del index
-               </li>
-              </ol>
-            </ul>
+          <iframe src = "https://www.educaplay.com/game/7826285-inline.html">
+            
+          </iframe>
         </article>
     </section>
     <footer>
