--- a/imagenes.html
+++ b/imagenes.html
@@ -11,6 +11,7 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
 <head>
 <title>Recursos</title>
 <link href="style.css" rel="stylesheet" type="text/css">
+<meta name="autor" content="Andres Manuel Arias Ariza">
 
 </head>
 <body>
@@ -28,7 +29,11 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
           </ul>
         </li>
         <li> <a href="autor.html">Autor</a>
-
+          <li> <a href="Autoevaluación" >Autoevaluación</a> 
+            <ul>
+              <li><a href="Evaluación_Sitio.html">  Evaluación Sitio.</a></li>         
+            </ul>
+          </li>
       </ul>  
     </nav>
     <section>
