--- a/videos.html
+++ b/videos.html
@@ -12,6 +12,8 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
 <title>Recursos</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 <meta charset="UTF-8">
+<meta name="autor" content="Andres Manuel Arias Ariza">
+
 </head>
 <body>
     <header>
@@ -28,7 +30,11 @@ los cuales se deben publicar en Youtube e incrustarlos en el sitio.
           </ul>
         </li>
         <li> <a href="autor.html">Autor</a>
-
+          <li> <a href="Autoevaluación" >Autoevaluación</a> 
+            <ul>
+              <li><a href="Evaluación_Sitio.html">  Evaluación Sitio.</a></li>         
+            </ul>
+          </li>
       </ul>  
     </nav>
     <section>
